# drna-py

./: .gitignore  CMakeLists.txt  Cargo.toml  Pymain.py  README.md  RSmain.rs  TODO.md  drna.h  lib.py  main.c  pyproject.toml
.github/workflows/: python-package.yml
C/: CMakeLists.txt  main.c
src/: main.rs
src/drna-py/: __init__.py  example.py
